<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_dashboard"
        android:shortcutLongLabel="@string/shortcut_dashboard_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lamadb.android"
            android:targetClass="com.lamadb.android.MainActivity">
            <extra android:name="shortcut" android:value="dashboard" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="scan_qr"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_scan_qr"
        android:shortcutLongLabel="@string/shortcut_scan_qr_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lamadb.android"
            android:targetClass="com.lamadb.android.MainActivity">
            <extra android:name="shortcut" android:value="scan_qr" />
        </intent>
    </shortcut>
</shortcuts>
